# kvmworkflows

./: .env.example  .gitignore  Dockerfile  README.md  config.example.yaml  config.yaml  docker-compose.yaml  pyproject.toml
dynamicconfig/: development-sql.yaml
hasura/: apply.sh
kvmworkflows/activities/: create_entries_email_messages.py  create_subscription_digest_email.py  fetch_entries.py  fetch_subscriptions.py  get_search_entries.py  get_tags.py  insert_search_entries.py  insert_tags.py  send_emails.py  send_subscription_emails.py
kvmworkflows/config/: config.py
kvmworkflows/graphql/: client.py  config.toml  queries.graphql
kvmworkflows/graphql/graphql_client/: __init__.py  client.py  deactivate_subscription.py  delete_entry_tags.py  delete_subscriptions_by_pk.py  enums.py  get_active_subscriptions_by_interval.py  get_entries_by_create_interval.py  get_entry_tags.py  (+11 more)
kvmworkflows/liquid/: render.py
kvmworkflows/liquid_utils/: render.py
kvmworkflows/mail/: mailngun.py  maingun.py
kvmworkflows/models/: avg_ratings.py  entries.py  result.py  review_status.py  search_entry.py  subscription.py  subscription_interval.py  subscription_types.py  supported_languages.py
kvmworkflows/ofdb/: search.py  tags.py
kvmworkflows/runners/: sync_bbox.py
kvmworkflows/web/: server.py
kvmworkflows/workers/: run.py  send_subscription_emails.py  sync_bbox.py
kvmworkflows/workflows/: run.py  run_sync_bbox.py  send_subscription_emails.py  sync_bbox.py  workflow.py
scripts/hasura/: export.sh  init_project.sh  install_cli.sh
tests/: test_subscription_digest.py
(+18 files in other folders)
