[tool.poetry]
name = "kvmworkflows"
version = "0.1.0"
description = ""
authors = ["Navid Kalaei <navidkalaei@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
hydra-core = "^1.3.2"
omegaconf = "^2.3.0"
pydantic = "^2.10.4"
httpx = "^0.28.1"
temporalio = "^1.8.0"
rich = "^13.9.4"
loguru = "^0.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
