[tool.poetry]
name = "kvmworkflows"
version = "0.1.0"
description = ""
authors = ["Navid Kalaei <navidkalaei@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
hydra-core = "^1.3.2"
omegaconf = "^2.3.0"
pydantic = "^2.10.4"
httpx = "^0.28.1"
temporalio = {extras = ["contrib"], version = "^1.10.0"}
rich = "^13.9.4"
loguru = "^0.7.3"
numpy = "^2.2.1"
tqdm = "^4.67.1"
fastapi = {extras = ["standard"], version = "^0.115.6"}
uvicorn = "^0.34.0"
ariadne-codegen = "^0.14.0"
python-liquid = "^2.0.1"
pydantic-converter = "^0.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
